<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/notification_big"
    android:layout_width="fill_parent"
    android:layout_height="128dp"
    android:background="@android:color/black">

    <ImageView
        android:id="@+id/status_bar_album_art"
        android:layout_width="@dimen/notification_expanded_height"
        android:layout_height="@dimen/notification_expanded_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:scaleType="centerCrop"
        android:src="@drawable/default_album_picture"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/status_bar_album_art"
        android:divider="?android:listDivider"
        android:dividerPadding="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:showDividers="middle">

        <ImageButton
            android:id="@+id/status_bar_prev"
            android:layout_width="0.0dip"
            android:layout_height="@dimen/play_controls_notification"
            android:layout_weight="1.0"
            android:background="?android:selectableItemBackground"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/apollo_holo_dark_prev"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/status_bar_play"
            android:layout_width="0.0dip"
            android:layout_height="@dimen/play_controls_notification"
            android:layout_weight="1.0"
            android:background="?android:selectableItemBackground"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/apollo_holo_dark_play"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/status_bar_next"
            android:layout_width="0.0dip"
            android:layout_height="@dimen/play_controls_notification"
            android:layout_weight="1.0"
            android:background="?android:selectableItemBackground"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/apollo_holo_dark_next"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="1.0px"
        android:layout_above="@+id/buttons"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/status_bar_album_art"
        android:background="?android:dividerHorizontal"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@id/status_bar_collapse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="?android:selectableItemBackground"
        android:padding="@dimen/notification_padding"
        android:src="@drawable/apollo_holo_dark_notification_bar_collapse"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/textarea"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_vertical"
        android:layout_toEndOf="@id/status_bar_album_art"
        android:layout_toStartOf="@id/status_bar_collapse"
        android:orientation="vertical"
        android:paddingEnd="@dimen/notification_padding"
        android:paddingStart="@dimen/notification_padding"
        android:paddingTop="@dimen/notification_padding">

        <TextView
            android:id="@+id/status_bar_track_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:focusable="true"
            android:singleLine="true"
            android:text="@string/dummy_track_name"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/status_bar_artist_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:singleLine="true"
            android:text="@string/dummy_artist_name"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/status_bar_album_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:singleLine="true"
            android:text="@string/dummy_album_name"
            android:textColor="@android:color/white" />
    </LinearLayout>
</RelativeLayout>